// Copyright (c) 2018-present Frédéric Maquin <fred@ephread.com> and contributors.
// Licensed under the terms of the MIT License.

import Foundation

struct AccessibilityIdentifiers {
    static let next = "AccessibilityIdentifiers.next"
}
