// Copyright (c) 2018-present Frédéric Maquin <fred@ephread.com> and contributors.
// Licensed under the terms of the MIT License.

import Foundation

struct AccessibilityIdentifiers {
    static let coachMarkNext = "AccessibilityIdentifiers.coachMarkNext"
    static let coachMarkHint = "AccessibilityIdentifiers.coachMarkHint"
    static let coachMarkBody = "AccessibilityIdentifiers.coachMarkBody"

    static let skipButton = "AccessibilityIdentifiers.skipButton"
    static let overlayView = "AccessibilityIdentifiers.overlayView"

    static let window = "AccessibilityIdentifiers.window"
}
