...
                            <constraint firstItem="wDi-0g-diO" firstAttribute="trailing" secondItem="3wU-jX-d22" secondAttribute="trailing" id="JoT-wo-si9"/>
                            <constraint firstItem="wDi-0g-diO" firstAttribute="top" secondItem="3wU-jX-d22" secondAttribute="top" id="ZfR-B4-hkV"/>
                            <constraint firstAttribute="bottom" secondItem="wDi-0g-diO" secondAttribute="bottom" id="gUh-st-3At"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Tsg-pb-Wdh"/>
                    </view>
                    <navigationItem key="navigationItem" title="Transition From Code" largeTitleDisplayMode="never" id="5Tx-8M-ciU"/>
                    <connections>
                        <outlet property="avatar" destination="5TO-mp-ADR" id="R4o-3T-LXw"/>
                        <outlet property="emailLabel" destination="gU5-J9-bQ4" id="ucU-5j-aR2"/>
                        <outlet property="handleLabel" destination="dUb-rQ-ee2" id="7gr-jM-U7I"/>
                        <outlet property="postsLabel" destination="wJM-AL-63v" id="NWW-y8-jqW"/>
                        <outlet property="reputationLabel" destination="8Hn-ec-3WZ" id="dfp-PE-KXe"/>
...
